<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/inventory_insert_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.inventory.insert.InvetoryInsertFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar7"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_inventory_insertdetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/dmsans_bold"
                    android:includeFontPadding="false"
                    android:text="@string/fragment_inventory_new_title"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_inventory_backhome"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_inventory_backhome"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/activity_onboarding_back"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_Inventory_save"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_vector_save"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/btn_save_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/dmsans_bold"
            android:gravity="center|start"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_inventory" />

        <EditText
            android:id="@+id/tvinventaris_insert_name"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/bg_tvcorner_stroke_gray"
            android:fontFamily="@font/dmsans_regular"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/dmsans_bold"
            android:gravity="center|start"
            android:text="@string/fragment_inventory_amount_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvinventaris_insert_name" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/dmsans_bold"
            android:gravity="center|start"
            android:text="@string/fragment_inventory_photo"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pgInventory_title" />

        <EditText
            android:id="@+id/tvinventaris_insert_amount"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/bg_tvcorner_stroke_gray"
            android:fontFamily="@font/dmsans_regular"
            android:includeFontPadding="false"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/img_inventory"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/dmsans_bold"
            android:gravity="center|start"
            android:text="@string/fragment_harvest_noted"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvinventaris_insert_amount" />

        <EditText
            android:id="@+id/tvinventaris_insert_note"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/bg_tvcorner_stroke_gray"
            android:fontFamily="@font/dmsans_regular"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btninventory_insert_delete"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/dmsans_bold"
            android:includeFontPadding="false"
            android:text="@string/btn_delete_title"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvinventaris_insert_note" />

        <TextView
            android:id="@+id/pgInventory_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:text="Status bar"
            android:textColor="#222222"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar7" />

        <ProgressBar
            android:id="@+id/pgInventory_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/pgInventory_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pgInventory_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>