<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/harvest_insert_layout"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:scrollbars="none"
    tools:context=".view.fragment.harvestresult.insertdetail.HarvestInsertDetailFragment">

    <LinearLayout
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/iconNav"
                    />

                <ImageView
                    android:id="@+id/btnHarvest_save"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/btn_save_title"
                    android:src="@drawable/ic_vector_save"
                    app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tvharvest_insert_hasil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/tvharvest_insert_berat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
...
                android:gravity="center|start"
                android:text="@string/fragment_harvest_weight_title"
                style="@style/tvTitle"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvharvest_insert_name" />

            <EditText
                android:id="@+id/tvharvest_insert_catatan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
...
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvharvest_insert_berat" />

            <Button
                android:id="@+id/btnharvest_insert_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/red"
...
