<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/financeInsertPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.finance.insert.FinanceInsertDetailFragment">
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_finance_insertdetail"
                    style="@style/iconNav"
                    />

                <ImageView
                    android:id="@+id/btn_Finance_save"
                    android:layout_width="20dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/btn_save_title"
                    android:src="@drawable/ic_vector_save"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_finance_insertdetail"
...
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <EditText
            android:id="@+id/tvfinance_insert_nama"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/tvfinance_insert_harga"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
...
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvfinance_insert_nama" />

        <EditText
            android:id="@+id/tvfinance_insert_catatan"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
...
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvfinance_insert_harga" />

        <Button
            android:id="@+id/btnfinance_insert_delete"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/red"
...
