...
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_harvetResultFragment"
            app:destination="@id/harvetResultFragment" />
        <action
            android:id="@+id/action_homeFragment_to_disaseFragment"
            app:destination="@id/disaseFragment" />
        <action
            android:id="@+id/action_homeFragment_to_harvestInsertDetailFragment"
            app:destination="@id/harvestInsertDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_weatherFragment"
            app:destination="@id/weatherFragment" />
    </fragment>
    <fragment
        android:id="@+id/financeFragment"
        android:name="com.example.rifsa_mobile.view.fragment.finance.financefragment.FinanceFragment"
        android:label="fragment_finance"
        tools:layout="@layout/fragment_finance" >
        <action
            android:id="@+id/action_financeFragment_to_financeInsertDetailFragment"
            app:destination="@id/financeInsertDetailFragment" />
...
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_disaseFragment_to_diseaseBookFragment"
            app:destination="@id/diseaseBookFragment" />
    </fragment>
    <fragment
        android:id="@+id/inventoryFragment"
        android:name="com.example.rifsa_mobile.view.fragment.inventory.inventoryfragment.InventoryFragment"
        android:label="fragment_inventory"
        tools:layout="@layout/fragment_inventory" >
        <action
            android:id="@+id/action_inventoryFragment_to_invetoryInsertFragment"
            app:destination="@id/invetoryInsertFragment" />
...
